Renamed notebooks/mlflow_test.py -> notebooks/mlflow_test.ipynb

--- a/notebooks/mlflow_test.ipynb
+++ b/notebooks/mlflow_test.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO: 'experiment-alpha' does not exist. Creating a new experiment\n"
+     ]
+    }
+   ],
    "source": [
     "import mlflow\n",
     "mlflow.set_experiment('experiment-alpha')\n",
@@ -15,7 +23,7 @@
     "    \n",
     "    for i in range(10):\n",
     "        mlflow.log_metric(\"i\", i)\n",
-    "    mlflow.log_artifact(\"Untitled.ipynb\")"
+    "    mlflow.log_artifact(\"mlflow_test.ipynb\")"
    ]
   }
  ],
