[skip travis] renamed:    notebooks/mlflow_test.ipynb -> notebooks/mlflow_example.ipynb

--- a/notebooks/mlflow_example.ipynb
+++ b/notebooks/mlflow_example.ipynb
@@ -23,7 +23,7 @@
     "    \n",
     "    for i in range(10):\n",
     "        mlflow.log_metric(\"i\", i)\n",
-    "    mlflow.log_artifact(\"mlflow_test.ipynb\")"
+    "    mlflow.log_artifact(\"mlflow_example.ipynb\")"
    ]
   }
  ],
