--- a/notebooks/mlflow_example.ipynb
+++ b/notebooks/mlflow_example.ipynb
@@ -25,6 +25,13 @@
     "        mlflow.log_metric(\"i\", i)\n",
     "    mlflow.log_artifact(\"mlflow_example.ipynb\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can access *mlflow UI* at http://localhost:5000/"
+   ]
   }
  ],
  "metadata": {
