Enabled buildkit for docker compose build commands in Makefile

--- a/notebooks/mlflow_example.ipynb
+++ b/notebooks/mlflow_example.ipynb
@@ -2,20 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO: 'experiment-alpha' does not exist. Creating a new experiment\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import mlflow\n",
-    "mlflow.set_experiment('experiment-alpha')\n",
+    "mlflow.set_experiment('test_experiment')\n",
     "with mlflow.start_run():\n",
     "    mlflow.log_param(\"name\", \"test\")\n",
     "    mlflow.log_param(\"waether\", \"sunny\")\n",
