[travis skip] Minor change in the mlflow_example notebook

--- a/notebooks/mlflow_example.ipynb
+++ b/notebooks/mlflow_example.ipynb
@@ -4,7 +4,15 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO: 'test_experiment' does not exist. Creating a new experiment\n"
+     ]
+    }
+   ],
    "source": [
     "import mlflow\n",
     "mlflow.set_experiment('test_experiment')\n",
