Fixed a minor typo in /notebooks/mlflow_example.ipynb

--- a/{{ cookiecutter.repo_slug }}/notebooks/mlflow_example.ipynb
+++ b/{{ cookiecutter.repo_slug }}/notebooks/mlflow_example.ipynb
@@ -18,7 +18,7 @@
     "mlflow.set_experiment('test_experiment')\n",
     "with mlflow.start_run():\n",
     "    mlflow.log_param(\"name\", \"test\")\n",
-    "    mlflow.log_param(\"waether\", \"sunny\")\n",
+    "    mlflow.log_param(\"weather\", \"sunny\")\n",
     "    mlflow.log_param(\"mood\", \"great\")\n",
     "    \n",
     "    for i in range(10):\n",
