Add step input to mlflow.log_metric test cases and demo notebook

--- a/{{ cookiecutter.repo_slug }}/notebooks/mlflow_example.ipynb
+++ b/{{ cookiecutter.repo_slug }}/notebooks/mlflow_example.ipynb
@@ -22,7 +22,7 @@
     "    mlflow.log_param(\"mood\", \"great\")\n",
     "    \n",
     "    for i in range(10):\n",
-    "        mlflow.log_metric(\"i\", i)\n",
+    "        mlflow.log_metric(\"i\", i**2, step=i)\n",
     "    mlflow.log_artifact(\"mlflow_example.ipynb\")"
    ]
   },
